--- a/vue-webpack-build/package.json
+++ b/vue-webpack-build/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.22.0",
